extensions/wikia/ArticleNavigation/styles/articleNavigation.scss
@import 'extensions/wikia/Venus/styles/mixins';
@import 'extensions/wikia/Venus/styles/variables';
@import 'skins/shared/color';

$article-navigation-icon-size: 38px;
$distanceToDropdown: 20px;
$dropdownArrowSize: 10px;

@mixin dropdownWidth($columnWidth: $medium-grid-column * 3) {
	.wikia-dropdown-nav-wrapper {
		width: $columnWidth * 2;
	}

	.wikia-dropdown-nav-sections-wrapper,
	.wikia-dropdown-nav-subsections-wrapper {
		width: $columnWidth;

		.comments-talk-counter {
			color: $color-alternate-text;
		}
	}
}

.article-navigation {
	margin-left: $medium-content-padding - $content-border-width;
	position: absolute;
	text-align: center;
	width: $medium-grid-column;
	z-index: $article-left-navigation-z-index;

	> ul {
		display: block;
		list-style-type: none;
		margin: 0 auto;
		padding: 0;
		position: relative;
		width: $article-navigation-icon-size;

		> li {
			display: table;
			margin-bottom: 6px;
			table-layout: fixed;

			&.hidden {
				display: none;
			}
		}
	}

	.nav-icon {
		@include venus-icons-font;

		background: $color-article-navigation-inactive;
		border-radius: 50%;
		color: $color-page;
		cursor: pointer;
		display: table-cell;
		font-size: $article-navigation-icon-size;
		line-height: $article-navigation-icon-size - 3px;
		margin-bottom: 6px;
		padding-top: 2px;
		position: relative;
		text-align: center;
		vertical-align: middle;
		width: 38px;
	}

	.wikia-dropdown-nav-wrapper {
		box-sizing: content-box;
		padding-left: $distanceToDropdown;
		top: round($dropdownArrowSize / 2) * -1;
	}

	@include dropdownWidth();

	.active {
		.nav-icon {
			&:before,
			&:after {
				content: "";
				border-top: $dropdownArrowSize solid transparent;
				border-bottom: $dropdownArrowSize solid transparent;
				position: absolute;
				top: $dropdownArrowSize;
			}

			&:before {
				border-right: $dropdownArrowSize solid $color-page-border-subtle;
				right: -$distanceToDropdown;
			}

			&:after {
				border-right: $dropdownArrowSize solid $color-page;
				right: -$distanceToDropdown - 1px;
				z-index: 1;
			}
		}
	}

	.share-link {
		text-decoration: none;
	}

	.single-share {
		display: none;

		.share-link {
			display: block;
		}
	}

	.multiple-share {
		width: 38px;
		.share-link {
			color: inherit;
		}
	}

	.active .nav-icon,
	.nav-icon:hover {
		background: $color-buttons;
		color: $color-button-text;
	}
}

@media #{$large-up} {
	.article-navigation {
		margin-left: $large-content-padding - $content-border-width;
		width: $large-grid-column;

		@include dropdownWidth($large-grid-column * 3);
	}
}

@media #{$small-only} {
	.article-navigation {
		margin-left: $small-content-padding - $content-border-width;
		width: $small-grid-column;

		@include dropdownWidth($small-grid-column * 3);
	}
}

