CON-2213 fix vertical alignment on IE for social icons

--- a/extensions/wikia/ArticleNavigation/styles/articleNavigation.scss
+++ b/extensions/wikia/ArticleNavigation/styles/articleNavigation.scss
@@ -113,6 +113,7 @@ $dropdownArrowSize: 10px;
 		width: 38px;
 		.share-link {
 			color: inherit;
+			display: block;
 		}
 	}
 
